--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "backbone-virtual-collection",
-  "description": "Use Backbone.Marionette CollectionViews on a subset of a Backbone collection",
-  "version": "0.6.3",
-  "main": "backbone.virtual-collection.js",
+  "name": "chaplin-virtual-collection",
+  "description": "Use Backbone.Chaplin CollectionViews on a subset of a Backbone collection",
+  "version": "0.7.0",
+  "main": "chaplin.virtual-collection.js",
   "keywords": [
     "backbone",
-    "marionette",
+    "chaplin",
     "teambox"
   ],
-  "homepage": "https://github.com/p3drosola/Backbone.VirtualCollection",
+  "homepage": "https://github.com/OlegKrutas/Chaplin.VirtualCollection",
   "authors": [
     "Pedro Solá<p3dro.sola@gmail.com>"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/p3drosola/Backbone.VirtualCollection.git"
+    "url": "https://github.com/OlegKrutas/Chaplin.VirtualCollection"
   },
   "dependencies": {
-    "backbone": "*",
+    "chaplin": "*",
     "underscore": "*"
   },
   "scripts": {
@@ -33,6 +33,7 @@
     "gulp-uglify": "^1.1.0",
     "gulp-umd": "^0.1.3",
     "mocha": "*",
-    "sinon": "*"
+    "sinon": "*",
+    "backbone": "*"
   }
 }
